--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
   <body>
     <h1>Mamaa..euuuu</h1>
     <h1>JAVA</h1>
-    <iframe src="javalab.pdf" width="100%" height="500px">
+    <iframe src="jassaaslab.pdf" width="100%" height="500px">
     </iframe>
-    <h1>OS</h1>
-    <iframe src="os.pdf" width="100%" height="500px">
-    </iframe>
-    <h1>DBMS</h1>
-    <iframe src="dbms.pdf" width="100%" height="500px">
-    </iframe>
+    
   </body>
 </html>
