--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Mamaa..euuuu</h1>
     <h1>JAVA</h1>
-    <iframe src="jassaaslab.pdf" width="100%" height="500px">
+    <iframe src="jassaas.pdf" width="100%" height="500px">
     </iframe>
     
   </body>
