--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
   </head>
   <body>
     <h1>Mamaa..euuuu</h1>
-    <h1>JAVA</h1>
-    <iframe src="jassaas.pdf" width="100%" height="500px">
+    <h1>dbms</h1>
+    <iframe src="os.pdf" width="100%" height="500px">
+    </iframe>
+    <h1>dbms</h1>
+    <iframe src="question bank(2).pdf" width="100%" height="500px">
     </iframe>
     
   </body>
