--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <iframe src="os.pdf" width="100%" height="500px">
     </iframe>
     <h1>dbms</h1>
-    <iframe src="question bank (2).pdf" width="100%" height="500px">
+    <iframe src="os2.pdf" width="100%" height="500px">
     </iframe>
     
   </body>
