--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Mamaa..euuuu</h1>
     <h1>dbms</h1>
-    <iframe src="os.pdf" width="100%" height="500px">
+    <iframe src="os2.pdf" width="100%" height="500px">
     </iframe>
     <h1>dbms</h1>
     <iframe src="os2.pdf" width="100%" height="500px">
