--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Mamaa..euuuu</h1>
     <h1>dbms</h1>
-    <iframe src="dbms1.docx" width="100%" height="500px">
+    <iframe src="dbms.pdf" width="100%" height="500px">
     </iframe>
     <h1>dbms</h1>
     <iframe src="dbms11.pdf" width="100%" height="500px">
